--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
   <button type="submit">Post</button>
 </form>
 
+<div class="instagram-section">
+  <h3>Instagram Content Editor</h3>
+  <div id="instagramEditor"></div>
+  <br>
+  <button id="postInstagramContent" type="button">Post Instagram Content</button>
+</div>
+
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 <script src="script.js"></script>
 </body>
